<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/usd"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/current_p_rate"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:padding="20dp"
        android:textSize="36sp"
        android:text="@string/main_header"
         />

    <TextView
        android:id="@+id/current_p_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_p_rate" />

    <TextView
        android:id="@+id/by_privatBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_privat_bank"
        android:textColor="@color/privatB" />

    <Button
        android:id="@+id/non-cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickNonCashCategory"
        android:padding="20dp"
        android:text="@string/non_cash" />
</LinearLayout>